# liteseq

./: .clang-format  .clangd  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  LICENSE  README.md
.github/workflows/: macos.yml  test.yml
cmake/: deps.cmake
examples/: example.c  main.c
include/: gfa.c  gfa.h  io.c  io.h  types.c  types.h  utils.c
include/liteseq/: gfa.h  refs.h  types.h
scripts/: wrap.sh
src/: gfa.c  gfa_l.c  gfa_s.c  gfa_s.h  refs.c
src/internal/: lq_enums.h  lq_io.c  lq_io.h  lq_types.c  lq_utils.c  lq_utils.h
src/refs/: ref_impl.c  ref_impl.h  ref_name.c  ref_walk.c  refs.c
tests/: CMakeLists.txt  enums_tests.cc  main_tests.cc  refs_tests.cc  utils_tests.cc
